--- a/ETRadeWPFAppDemo/packages.config
+++ b/ETRadeWPFAppDemo/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
+  <package id="MahApps.Metro.IconPacks.Material" version="4.11.0" targetFramework="net481" />
   <package id="MaterialDesignColors" version="2.1.4" targetFramework="net481" />
   <package id="MaterialDesignThemes" version="4.9.0" targetFramework="net481" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net481" />
